# pydantic-ai-gentle-introduction

./: .gitignore  database.db  intro_to_pydantic_ai.ipynb  pyproject.toml
