[project]
name = "pydantic-ai-intro"
version = "0.1.0"
description = "Gentle introduction to Pydantic AI"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "loguru>=0.7.3",
    "pydantic>=2.13.0",
    "pydantic-ai>=1.81.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]
